Hawk/.antlr/hawkParser.java
// Generated from c:/Users/gusbr/Desktop/CodingShit/Romulus-I/Hawk/hawkParser.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class hawkParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		KBOOL=1, KINT=2, KCHAR=3, KVOID=4, KADD=5, KSUB=6, KMUL=7, KDIV=8, KMOD=9, 
		KBAND=10, KBOR=11, KBNOT=12, KNOT=13, KXOR=14, KOR=15, KAND=16, KSHL=17, 
		KSHR=18, LPAREN=19, RPAREN=20, LBRACKET=21, RBRACKET=22, LBRACE=23, RBRACE=24, 
		KASSIGN=25, KADDASSIGN=26, KSUBASSIGN=27, KMULASSIGN=28, KDIVASSIGN=29, 
		KMODASSIGN=30, KANDASSIGN=31, KORASSIGN=32, KNOTASSIGN=33, KXORASSIGN=34, 
		KSHLASSIGN=35, KSHRASSIGN=36, KQUESTION=37, KCOLON=38, KEQ=39, KNE=40, 
		KG=41, KL=42, KGE=43, KLE=44, KINC=45, KDEC=46, KSTATIC=47, KCONST=48, 
		KSTRUCT=49, KIF=50, KELSE=51, KWHILE=52, KDO=53, KFOR=54, COMMA=55, SEMICOLON=56, 
		DOT=57, ARROW=58, ID=59, INT=60, HEX=61, BIN=62, COMMENT=63, BLOCKCOMMENT=64, 
		WS=65;
	public static final int
		RULE_program = 0, RULE_type = 1, RULE_op = 2, RULE_assignOp = 3, RULE_number = 4, 
		RULE_cond = 5, RULE_stmt = 6, RULE_trueStmt = 7, RULE_expr = 8, RULE_functionStmt = 9, 
		RULE_ifStmt = 10, RULE_ifBlock = 11, RULE_elifBlock = 12, RULE_elseBlock = 13, 
		RULE_whileStmt = 14, RULE_forRangeStmt = 15, RULE_forEachStmt = 16, RULE_doWhileStmt = 17, 
		RULE_struct = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "type", "op", "assignOp", "number", "cond", "stmt", "trueStmt", 
			"expr", "functionStmt", "ifStmt", "ifBlock", "elifBlock", "elseBlock", 
			"whileStmt", "forRangeStmt", "forEachStmt", "doWhileStmt", "struct"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'bool'", "'int'", "'char'", "'void'", "'+'", "'-'", "'*'", "'/'", 
			"'%'", "'&'", "'|'", "'~'", "'!'", "'^'", "'||'", "'&&'", "'<<'", "'>>'", 
			"'('", "')'", "'['", "']'", "'{'", "'}'", "'='", "'+='", "'-='", "'*='", 
			"'/='", "'%='", "'&='", "'|='", "'~='", "'^='", "'<<='", "'>>='", "'?'", 
			"':'", "'=='", "'!='", "'>'", "'<'", "'>='", "'<='", "'++'", "'--'", 
			"'static'", "'const'", "'struct'", "'if'", "'else'", "'while'", "'do'", 
			"'for'", "','", "';'", "'.'", "'->'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "KBOOL", "KINT", "KCHAR", "KVOID", "KADD", "KSUB", "KMUL", "KDIV", 
			"KMOD", "KBAND", "KBOR", "KBNOT", "KNOT", "KXOR", "KOR", "KAND", "KSHL", 
			"KSHR", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "LBRACE", "RBRACE", 
			"KASSIGN", "KADDASSIGN", "KSUBASSIGN", "KMULASSIGN", "KDIVASSIGN", "KMODASSIGN", 
			"KANDASSIGN", "KORASSIGN", "KNOTASSIGN", "KXORASSIGN", "KSHLASSIGN", 
			"KSHRASSIGN", "KQUESTION", "KCOLON", "KEQ", "KNE", "KG", "KL", "KGE", 
			"KLE", "KINC", "KDEC", "KSTATIC", "KCONST", "KSTRUCT", "KIF", "KELSE", 
			"KWHILE", "KDO", "KFOR", "COMMA", "SEMICOLON", "DOT", "ARROW", "ID", 
			"INT", "HEX", "BIN", "COMMENT", "BLOCKCOMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "hawkParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public hawkParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(hawkParser.EOF, 0); }
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(38);
				stmt();
				}
				}
				setState(41); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 8680653097393456286L) != 0) );
			setState(43);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeContext extends ParserRuleContext {
		public TerminalNode KBOOL() { return getToken(hawkParser.KBOOL, 0); }
		public List<TerminalNode> KMUL() { return getTokens(hawkParser.KMUL); }
		public TerminalNode KMUL(int i) {
			return getToken(hawkParser.KMUL, i);
		}
		public TerminalNode KINT() { return getToken(hawkParser.KINT, 0); }
		public TerminalNode KCHAR() { return getToken(hawkParser.KCHAR, 0); }
		public TerminalNode KVOID() { return getToken(hawkParser.KVOID, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_type);
		int _la;
		try {
			setState(73);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case KBOOL:
				enterOuterAlt(_localctx, 1);
				{
				setState(45);
				match(KBOOL);
				setState(49);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==KMUL) {
					{
					{
					setState(46);
					match(KMUL);
					}
					}
					setState(51);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case KINT:
				enterOuterAlt(_localctx, 2);
				{
				setState(52);
				match(KINT);
				setState(56);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==KMUL) {
					{
					{
					setState(53);
					match(KMUL);
					}
					}
					setState(58);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case KCHAR:
				enterOuterAlt(_localctx, 3);
				{
				setState(59);
				match(KCHAR);
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==KMUL) {
					{
					{
					setState(60);
					match(KMUL);
					}
					}
					setState(65);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case KVOID:
				enterOuterAlt(_localctx, 4);
				{
				setState(66);
				match(KVOID);
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==KMUL) {
					{
					{
					setState(67);
					match(KMUL);
					}
					}
					setState(72);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OpContext extends ParserRuleContext {
		public TerminalNode KADD() { return getToken(hawkParser.KADD, 0); }
		public TerminalNode KSUB() { return getToken(hawkParser.KSUB, 0); }
		public TerminalNode KMUL() { return getToken(hawkParser.KMUL, 0); }
		public TerminalNode KDIV() { return getToken(hawkParser.KDIV, 0); }
		public TerminalNode KMOD() { return getToken(hawkParser.KMOD, 0); }
		public TerminalNode KBAND() { return getToken(hawkParser.KBAND, 0); }
		public TerminalNode KBOR() { return getToken(hawkParser.KBOR, 0); }
		public TerminalNode KBNOT() { return getToken(hawkParser.KBNOT, 0); }
		public TerminalNode KNOT() { return getToken(hawkParser.KNOT, 0); }
		public TerminalNode KXOR() { return getToken(hawkParser.KXOR, 0); }
		public TerminalNode KOR() { return getToken(hawkParser.KOR, 0); }
		public TerminalNode KAND() { return getToken(hawkParser.KAND, 0); }
		public TerminalNode KSHL() { return getToken(hawkParser.KSHL, 0); }
		public TerminalNode KSHR() { return getToken(hawkParser.KSHR, 0); }
		public OpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_op; }
	}

	public final OpContext op() throws RecognitionException {
		OpContext _localctx = new OpContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_op);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 524256L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignOpContext extends ParserRuleContext {
		public TerminalNode KASSIGN() { return getToken(hawkParser.KASSIGN, 0); }
		public TerminalNode KADDASSIGN() { return getToken(hawkParser.KADDASSIGN, 0); }
		public TerminalNode KSUBASSIGN() { return getToken(hawkParser.KSUBASSIGN, 0); }
		public TerminalNode KMULASSIGN() { return getToken(hawkParser.KMULASSIGN, 0); }
		public TerminalNode KDIVASSIGN() { return getToken(hawkParser.KDIVASSIGN, 0); }
		public TerminalNode KMODASSIGN() { return getToken(hawkParser.KMODASSIGN, 0); }
		public TerminalNode KANDASSIGN() { return getToken(hawkParser.KANDASSIGN, 0); }
		public TerminalNode KORASSIGN() { return getToken(hawkParser.KORASSIGN, 0); }
		public TerminalNode KNOTASSIGN() { return getToken(hawkParser.KNOTASSIGN, 0); }
		public TerminalNode KXORASSIGN() { return getToken(hawkParser.KXORASSIGN, 0); }
		public TerminalNode KSHLASSIGN() { return getToken(hawkParser.KSHLASSIGN, 0); }
		public TerminalNode KSHRASSIGN() { return getToken(hawkParser.KSHRASSIGN, 0); }
		public AssignOpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignOp; }
	}

	public final AssignOpContext assignOp() throws RecognitionException {
		AssignOpContext _localctx = new AssignOpContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_assignOp);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 137405399040L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NumberContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(hawkParser.INT, 0); }
		public TerminalNode HEX() { return getToken(hawkParser.HEX, 0); }
		public TerminalNode BIN() { return getToken(hawkParser.BIN, 0); }
		public NumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_number; }
	}

	public final NumberContext number() throws RecognitionException {
		NumberContext _localctx = new NumberContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_number);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 8070450532247928832L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CondContext extends ParserRuleContext {
		public TerminalNode KEQ() { return getToken(hawkParser.KEQ, 0); }
		public TerminalNode KNE() { return getToken(hawkParser.KNE, 0); }
		public TerminalNode KG() { return getToken(hawkParser.KG, 0); }
		public TerminalNode KL() { return getToken(hawkParser.KL, 0); }
		public TerminalNode KGE() { return getToken(hawkParser.KGE, 0); }
		public TerminalNode KLE() { return getToken(hawkParser.KLE, 0); }
		public CondContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cond; }
	}

	public final CondContext cond() throws RecognitionException {
		CondContext _localctx = new CondContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_cond);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 34634616274944L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StmtContext extends ParserRuleContext {
		public FunctionStmtContext functionStmt() {
			return getRuleContext(FunctionStmtContext.class,0);
		}
		public IfStmtContext ifStmt() {
			return getRuleContext(IfStmtContext.class,0);
		}
		public WhileStmtContext whileStmt() {
			return getRuleContext(WhileStmtContext.class,0);
		}
		public DoWhileStmtContext doWhileStmt() {
			return getRuleContext(DoWhileStmtContext.class,0);
		}
		public ForRangeStmtContext forRangeStmt() {
			return getRuleContext(ForRangeStmtContext.class,0);
		}
		public ForEachStmtContext forEachStmt() {
			return getRuleContext(ForEachStmtContext.class,0);
		}
		public StructContext struct() {
			return getRuleContext(StructContext.class,0);
		}
		public TrueStmtContext trueStmt() {
			return getRuleContext(TrueStmtContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(hawkParser.SEMICOLON, 0); }
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_stmt);
		try {
			setState(93);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(83);
				functionStmt();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(84);
				ifStmt();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(85);
				whileStmt();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(86);
				doWhileStmt();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(87);
				forRangeStmt();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(88);
				forEachStmt();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(89);
				struct();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(90);
				trueStmt();
				setState(91);
				match(SEMICOLON);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TrueStmtContext extends ParserRuleContext {
		public Token ret;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public AssignOpContext assignOp() {
			return getRuleContext(AssignOpContext.class,0);
		}
		public TerminalNode KSTATIC() { return getToken(hawkParser.KSTATIC, 0); }
		public List<TerminalNode> KCONST() { return getTokens(hawkParser.KCONST); }
		public TerminalNode KCONST(int i) {
			return getToken(hawkParser.KCONST, i);
		}
		public List<TerminalNode> ID() { return getTokens(hawkParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(hawkParser.ID, i);
		}
		public TerminalNode KINC() { return getToken(hawkParser.KINC, 0); }
		public TerminalNode KDEC() { return getToken(hawkParser.KDEC, 0); }
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public TerminalNode LPAREN() { return getToken(hawkParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(hawkParser.RPAREN, 0); }
		public List<TerminalNode> COMMA() { return getTokens(hawkParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(hawkParser.COMMA, i);
		}
		public TrueStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_trueStmt; }
	}

	public final TrueStmtContext trueStmt() throws RecognitionException {
		TrueStmtContext _localctx = new TrueStmtContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_trueStmt);
		int _la;
		try {
			setState(137);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==KSTATIC) {
					{
					setState(95);
					match(KSTATIC);
					}
				}

				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==KCONST) {
					{
					setState(98);
					match(KCONST);
					}
				}

				setState(101);
				expr(0);
				setState(102);
				assignOp();
				setState(103);
				expr(0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(105);
				match(ID);
				setState(106);
				_la = _input.LA(1);
				if ( !(_la==KINC || _la==KDEC) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==KCONST) {
					{
					setState(107);
					match(KCONST);
					}
				}

				setState(110);
				type();
				setState(111);
				((TrueStmtContext)_localctx).ret = match(ID);
				setState(112);
				match(LPAREN);
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 281474976710686L) != 0)) {
					{
					setState(114);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==KCONST) {
						{
						setState(113);
						match(KCONST);
						}
					}

					setState(116);
					type();
					setState(117);
					match(ID);
					setState(127);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==COMMA) {
						{
						{
						setState(118);
						match(COMMA);
						setState(120);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la==KCONST) {
							{
							setState(119);
							match(KCONST);
							}
						}

						setState(122);
						type();
						setState(123);
						match(ID);
						}
						}
						setState(129);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(132);
				match(RPAREN);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(134);
				_la = _input.LA(1);
				if ( !(_la==KINC || _la==KDEC) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(135);
				match(ID);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(136);
				expr(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprContext extends ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	 
		public ExprContext() { }
		public void copyFrom(ExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class VarExprContext extends ExprContext {
		public TerminalNode ID() { return getToken(hawkParser.ID, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode LBRACKET() { return getToken(hawkParser.LBRACKET, 0); }
		public TerminalNode RBRACKET() { return getToken(hawkParser.RBRACKET, 0); }
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public VarExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TernaryExprContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode KQUESTION() { return getToken(hawkParser.KQUESTION, 0); }
		public TerminalNode KCOLON() { return getToken(hawkParser.KCOLON, 0); }
		public TernaryExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PtrAccessExprContext extends ExprContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode ARROW() { return getToken(hawkParser.ARROW, 0); }
		public TerminalNode ID() { return getToken(hawkParser.ID, 0); }
		public PtrAccessExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DerefExprContext extends ExprContext {
		public TerminalNode KMUL() { return getToken(hawkParser.KMUL, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public DerefExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AddrExprContext extends ExprContext {
		public TerminalNode KBAND() { return getToken(hawkParser.KBAND, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AddrExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ArithmeticExprContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public OpContext op() {
			return getRuleContext(OpContext.class,0);
		}
		public ArithmeticExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class RelationalExprContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public CondContext cond() {
			return getRuleContext(CondContext.class,0);
		}
		public RelationalExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class BraceExprContext extends ExprContext {
		public TerminalNode LBRACE() { return getToken(hawkParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(hawkParser.RBRACE, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(hawkParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(hawkParser.COMMA, i);
		}
		public BraceExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ParenExprContext extends ExprContext {
		public TerminalNode LPAREN() { return getToken(hawkParser.LPAREN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(hawkParser.RPAREN, 0); }
		public ParenExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NumExprContext extends ExprContext {
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public NumExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AccessExprContext extends ExprContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode DOT() { return getToken(hawkParser.DOT, 0); }
		public TerminalNode ID() { return getToken(hawkParser.ID, 0); }
		public AccessExprContext(ExprContext ctx) { copyFrom(ctx); }
	}

	public final ExprContext expr() throws RecognitionException {
		return expr(0);
	}

	private ExprContext expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprContext _localctx = new ExprContext(_ctx, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 16;
		enterRecursionRule(_localctx, 16, RULE_expr, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(172);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case KMUL:
				{
				_localctx = new DerefExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
